Improved Description file.

--- a/README.Rmd
+++ b/README.Rmd
@@ -76,10 +76,10 @@ focus_p <- ggfocus(p,country,c("Brazil","Argentina"), color_focus = c("Green","B
 gganimate(focus_p,interval=.2)
 ```
 ```{r, out.width = "600px",echo=FALSE}
-knitr::include_graphics("focus_gapminder.gif")
+knitr::include_graphics("README_files/focus_gapminder.gif")
 ```
 
-### Using ggfocus on ggmaps
+#### Using ggfocus with ggmaps
 
 ```{r}
 library(ggmap)
