--- a/README.Rmd
+++ b/README.Rmd
@@ -22,10 +22,11 @@ Many times during data analysis, one may want to visualize data for a specific s
 
 ## Installing ggfocus
 
-The package is not available in CRAN (yet), but you can install it from github with [devtools](https://github.com/hadley/devtools).
+The package is available in CRAN, but you can also install the latest version from github with [devtools](https://github.com/hadley/devtools).
 
 ```{r install, eval=FALSE}
-devtools::install_github("Freguglia/ggfocus")
+devtools::install_github("Freguglia/ggfocus") # Latest version
+install.packages("ggfocus") # CRAN version
 ```
 
 ## Usage 
@@ -94,4 +95,3 @@ p <- ggplot(wm, aes(x=long, y = lat, group = group)) + geom_polygon(color="black
 ggfocus(p, region, c("Brazil","India","Italy","Canada"),focus_aes = c("fill","alpha"),
         color_focus = "blue", alpha_other = 0.15) + guides(fill=FALSE)
 ```
-
