--- a/README.Rmd
+++ b/README.Rmd
@@ -22,7 +22,7 @@ Many times during data analysis, one may want to visualize data for a specific s
 
 ## Installing ggfocus
 
-The package is available in CRAN, but you can also install the latest version from github with [devtools](https://github.com/hadley/devtools).
+The package is available on CRAN, but you can also install the latest version from github with [devtools](https://github.com/hadley/devtools).
 
 ```{r install, eval=FALSE}
 devtools::install_github("Freguglia/ggfocus") # Latest version
@@ -47,7 +47,7 @@ ggfocus(p, var, focus_levels, focus_aes = c("color", "alpha"),
 - **color_other**: color for levels not selected.
 - **alpha_focus** and **alpha_other**: alpha for selcted and not selected levels, respectively.
 
- You can also use the usual `ggplot2` grammar `+` to add scales with the family of function `scale_*_focus()`. These two uses are equivalent, read the vignette for more information.
+ You can also use the usual `ggplot2` grammar `+` to add scales with the family of function `scale_*_focus()`. These two uses are equivalent, read the [vignette](vignettes/a-quick-guide-to-ggfocus.html) for more information.
 
 
 ## Examples
@@ -74,19 +74,7 @@ ggfocus(p, country, c("Brazil","Argentina"), color_focus = c("Green","Blue"))
 ```
 
 ### Interaction with other extensions
-Because **ggfocus()** retuns a modified **ggplot** object, other ggplot extensions can used with it, for example, [gganimate](https://github.com/dgrtwo/gganimate).
-
-```{r, eval=FALSE}
-library(gganimate)
-p <- ggplot(gapminder, aes(x=log(gdpPercap), y=lifeExp, size=pop, frame=year)) + geom_point()
-focus_p <- ggfocus(p,country,c("Brazil","Argentina"), color_focus = c("Green","Blue"))
-gganimate(focus_p,interval=.2)
-```
-```{r, out.width = "600px",echo=FALSE}
-knitr::include_graphics("man/figures/focus_gapminder.gif")
-```
-
-#### Using ggfocus with ggmaps
+Because **ggfocus()** retuns a modified **ggplot** object, other ggplot extensions can used with it, for example, [ggmap](https://cran.r-project.org/web/packages/ggmap/).
 
 ```{r}
 library(ggmap)
