Small fix to vignette title.

--- a/vignettes/a-quick-guide-to-ggfocus.Rmd
+++ b/vignettes/a-quick-guide-to-ggfocus.Rmd
@@ -4,7 +4,7 @@ author: "Victor Freguglia"
 date: "09/08/2018"
 output: rmarkdown::html_vignette
 vignette: >
-  %\VignetteIndexEntry{Vignette Title}
+  %\VignetteIndexEntry{A quick guide to ggfocus}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
