--- a/README.Rmd
+++ b/README.Rmd
@@ -6,7 +6,7 @@ output: md_document
 
 # ggfocus <img src='man/figures/logo.png' align="right" height="200" />
 
-```{r, echo = FALSE}
+```{r setup, echo = FALSE}
 knitr::opts_chunk$set(
   collapse = TRUE,
   comment = "#>",
@@ -23,9 +23,11 @@ knitr::opts_chunk$set(
 
 ## Introduction
 
-Many times during data analysis, one may want to visualize data for a specific subgroup of observations. While ggplot is great for data visualization in general, constructing graphics that focus on those subgroups may need very troublesome manipulation of data and graphical scales (for example colors), i.e. setting low alpha for unimportant observations, coloring things in a way that highlights the focus subgroup, etc.
+In data analysis, one may want to visualize data for a specific subgroup of observations. Simply filtering out observations that do not belong to the subgroup may take the information out of context. Therefore, it is necessary to have tools that allow the analyst to draw attention (focus) on that subgroup within the complete relevant information available.
 
-**ggfocus** allows you to build graphics that focus on those specific subgroups by doing the scale manipulation automatically while keeping all the flexibility from ggplot. The idea behind this approach is from [this](https://github.com/tidyverse/ggplot2/issues/2627) issue from tidyverse/ggplot2.
+While `ggplot2` is a great tool for data visualization in general, constructing graphics that focus on those subgroups may need very troublesome manipulation of data and graphical scales (for example colors) together, i.e. setting low alpha for unimportant observations, coloring things in a way that highlights the focused subgroup, etc.
+
+`ggfocus` allows you to build graphics that focus on those specific subgroups by doing the scale manipulation automatically while keeping all the flexibility from `ggplot.` The idea behind this package is from [this](https://github.com/tidyverse/ggplot2/issues/2627) issue from `tidyverse/ggplot2`.
 
 
 ## Installing ggfocus
@@ -39,61 +41,52 @@ install.packages("ggfocus") # CRAN version
 
 ## Usage 
 
-*ggfocus* implements the `ggfocus()` function.
+The workflow of `ggfocus` is the same as any `ggplot` graphic with the addition of the **focus scales** family of functions:
 
-```{r gfocus, eval=FALSE}
-ggfocus(p, var, focus_levels, focus_aes = c("color", "alpha"),
-  color_focus = NULL, color_other = "black", alpha_focus = 1,
-  alpha_other = 0.05)
-```
+  * `scale_color_focus(focus_levels = character(0), color_focus = NULL, color_other = "black", palette_focus = "Set1")`
+  * `scale_fill_focus(focus_levels = character(0), color_focus = NULL, color_other = "gray", palette_focus = "Set1")`
+  * `scale_alpha_focus(focus_levels = character(0), alpha_focus = 1, alpha_other = .05)`
+  * `scale_linetype_focus(focus_levels = character(0), linetype_focus = 1, linetype_other = 3)`
+  * `scale_shape_focus(focus_levels = character(0), shape_focus = 8, shape_other = 1)`
+  * `scale_size_focus(focus_levels = character(0), size_focus = 3, size_other = 1)`
 
-- `p`: a ggplot.
-- `var`: the factor variable that you want to specify levels to focus (note that this can be a numeric variable that represents a factor, i.e., you gave an integer number to each 'level', like an integer ID or a character variable).
-- `focus_levels`: a vector of levels (either character or numeric) to highlight.
-- `focus_aes`: which aesthetics should be used to highlight the levels. Currently only `color`, `alpha` and `fill` are available. A character vector is expected.
-- `color_focus`: what color selected levels should have? It can be either one color (all equal) or character vector with one color for each level. This affects both `color` and `fill`.
-- `color_other`: color for levels not selected.
-- `alpha_focus` and `alpha_other`: alpha for selcted and not selected levels, respectively.
+The user should map the variable with the grouping variable to all the `aes` used to highlight observations and then use these functions to automatically create scales that highlight a specified group of observations.
 
- You can also use the usual `ggplot2` grammar `+` to add scales with the family of function `scale_*_focus()`. These two uses are equivalent, read the [vignette](vignettes/a-quick-guide-to-ggfocus.html) for more information.
-
+Both the selected and unselected groups characteristics are customizable with the parameters of focus scales. See the examples below.
 
 ## Examples
 
-In the `gapminder` dataset, first we create a simple `ggplot`
-```{r ex1_create}
-library(ggplot2)
-library(gapminder)
-p <- ggplot(gapminder, aes(x=log(gdpPercap), y=lifeExp, group=country)) + geom_line()
-p
-```
+Creating an example dataset.
 
-Now we can use *ggfocus()* to highlight European countries only.
-```{r}
+```{r example_1}
 library(ggfocus)
-ggfocus(p, continent, "Europe")
+set.seed(1)
+# Create an example dataset
+df <- data.frame(u1 = runif(300), 
+                 u2 = runif(300),
+                 grp = sample(LETTERS[1:10], 300, replace = TRUE))
+dplyr::glimpse(df)
 ```
 
-We can also highlight countries
-```{r}
-ggfocus(p, country, c("Brazil","Argentina"), color_focus = c("Green","Blue"))
+Visualizing with focus on observations such that `grp` is `A` or `B`.
+
+```{r example_2}
+ggplot(df, aes(x = u1, y = u2, color = grp, alpha = grp)) +
+  geom_point() +
+  scale_color_focus(c("A", "B"), color_focus = c("blue", "red")) +
+  scale_alpha_focus(c("A", "B"))
 ```
+
 
 ### Interaction with other extensions
 
-Because `ggfocus()` retuns a modified `ggplot` object and only controls scales, other `ggplot` extensions and types of graphics can interact with it the same way, an example with `maps` is shown below.
+Since `ggfocus` creates the focused visualization solely by controlling scales, other `ggplot` extensions and types of graphics can interact with it the same way, an example with the `maps` package is shown below.
 
-```{r}
+```{r example_map}
 library(maps)
-
 wm <- map_data("world")
-p <- ggplot(wm, aes(x=long, y = lat, group = group)) + geom_polygon(color="black") + theme_void()
-ggfocus(p, region, c("Brazil","India","Italy","Canada"),focus_aes = c("fill","alpha"),
-        color_focus = "blue", alpha_other = 0.15) + guides(fill=FALSE)
+ggplot(wm, aes(x=long, y = lat, group = group, fill = region)) + 
+  geom_polygon(color="black") +
+  theme_void() +
+  scale_fill_focus(c("Brazil", "Canada", "Australia", "India"), color_other = "gray")
 ```
-
-# Contributing and Bug Reports
-
- - If you find any unexpected result or bug, please file an issue with a reproducible example.
- - For new features, for example, the addition of the focus scale for a new aesthetics, file and issue and add and example or a brief explanation with important aspects for the focus scale of this new aesthetics.
- - If you want to contribute somehow, please contact me or file an issue so we can coordinate.
