--- a/README.Rmd
+++ b/README.Rmd
@@ -32,7 +32,7 @@ While `ggplot2` is a great tool for data visualization in general, constructing 
 
 ## Installing ggfocus
 
-The package is available on CRAN, but you can also install the latest version from github with [devtools](https://github.com/hadley/devtools).
+The package is available on CRAN, but you can also install the latest version from Github with [devtools](https://github.com/hadley/devtools).
 
 ```{r install, eval=FALSE}
 devtools::install_github("Freguglia/ggfocus") # Latest version
